--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_neumorphic: ^3.2.0
+  slide_digital_clock: ^1.0.3
+  flutter_analog_clock: ^1.0.3
+  flutter_neumorphic_plus: ^3.3.0
 
 dev_dependencies:
   flutter_test:
